--- a/src/mylangchain_app/00Basic/003_OutPutParser종류.ipynb
+++ b/src/mylangchain_app/00Basic/003_OutPutParser종류.ipynb
@@ -59,19 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AI 관련 기술 목록:\n",
-      "['Machine Learning', 'Deep Learning', 'Natural Language Processing', 'Computer Vision', 'Reinforcement Learning']\n",
-      " '../data/ai_technologies.csv' 파일로 저장 완료!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# 프롬프트 템플릿 설정\n",
@@ -85,10 +75,18 @@
     "#model = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
     "llm = ChatOpenAI(\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
-    "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
-    "    #model=\"moonshotai/kimi-k2-instruct-0905\",\n",
+    "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
+    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
     "    temperature=0.7\n",
-    ")\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# 프롬프트, 모델, 출력 파서를 연결하여 체인 생성\n",
     "chain = prompt | llm | output_parser\n",
@@ -171,7 +169,63 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Format Instructions:\n",
+      " The output should be formatted as a string as the operation, followed by a colon, followed by the column or row to be queried on, followed by optional array parameters.\n",
+      "1. The column names are limited to the possible columns below.\n",
+      "2. Arrays must either be a comma-separated list of numbers formatted as [1,3,5], or it must be in range of numbers formatted as [0..4].\n",
+      "3. Remember that arrays are optional and not necessarily required.\n",
+      "4. If the column is not in the possible columns or the operation is not a valid Pandas DataFrame operation, return why it is invalid as a sentence starting with either \"Invalid column\" or \"Invalid operation\".\n",
+      "\n",
+      "As an example, for the formats:\n",
+      "1. String \"column:num_legs\" is a well-formatted instance which gets the column num_legs, where num_legs is a possible column.\n",
+      "2. String \"row:1\" is a well-formatted instance which gets row 1.\n",
+      "3. String \"column:num_legs[1,2]\" is a well-formatted instance which gets the column num_legs for rows 1 and 2, where num_legs is a possible column.\n",
+      "4. String \"row:1[num_legs]\" is a well-formatted instance which gets row 1, but for just column num_legs, where num_legs is a possible column.\n",
+      "5. String \"mean:num_legs[1..3]\" is a well-formatted instance which takes the mean of num_legs from rows 1 to 3, where num_legs is a possible column and mean is a valid Pandas DataFrame operation.\n",
+      "6. String \"do_something:num_legs\" is a badly-formatted instance, where do_something is not a valid Pandas DataFrame operation.\n",
+      "7. String \"mean:invalid_col\" is a badly-formatted instance, where invalid_col is not a possible column.\n",
+      "\n",
+      "Here are the possible columns:\n",
+      "```\n",
+      "PassengerId, Survived, Pclass, Name, Sex, Age, SibSp, Parch, Ticket, Fare, Cabin, Embarked\n",
+      "```\n",
+      "\n",
+      "Name 컬럼 출력\n",
+      "<class 'dict'>\n",
+      "{'Name': 0                                Braund, Mr. Owen Harris\n",
+      "1      Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
+      "2                                 Heikkinen, Miss. Laina\n",
+      "3           Futrelle, Mrs. Jacques Heath (Lily May Peel)\n",
+      "4                               Allen, Mr. William Henry\n",
+      "                             ...                        \n",
+      "886                                Montvila, Rev. Juozas\n",
+      "887                         Graham, Miss. Margaret Edith\n",
+      "888             Johnston, Miss. Catherine Helen \"Carrie\"\n",
+      "889                                Behr, Mr. Karl Howell\n",
+      "890                                  Dooley, Mr. Patrick\n",
+      "Name: Name, Length: 891, dtype: object}\n",
+      "첫번째 행 출력\n",
+      "{'0': PassengerId                          1\n",
+      "Survived                             0\n",
+      "Pclass                               3\n",
+      "Name           Braund, Mr. Owen Harris\n",
+      "Sex                               male\n",
+      "Age                               22.0\n",
+      "SibSp                                1\n",
+      "Parch                                0\n",
+      "Ticket                       A/5 21171\n",
+      "Fare                              7.25\n",
+      "Cabin                              NaN\n",
+      "Embarked                             S\n",
+      "Name: 0, dtype: object}\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from langchain.output_parsers import PandasDataFrameOutputParser\n",
@@ -191,6 +245,95 @@
     "# 형식 지침 출력\n",
     "format_instructions = parser.get_format_instructions()\n",
     "print(\"Format Instructions:\\n\", format_instructions)\n",
+    "\n",
+    "# 프롬프트 템플릿 설정\n",
+    "prompt = PromptTemplate(\n",
+    "    template=\"\"\" \n",
+    "    You are a helpful assistant that interacts with a Pandas DataFrame.\n",
+    "    The DataFrame contains the following columns: {columns}.\n",
+    "    \n",
+    "    Your task is to answer the user's query by generating a command in the following format:\n",
+    "    {format_instructions}\n",
+    "    \n",
+    "    User Query: {query}    \n",
+    "    \"\"\",\n",
+    "    input_variables=[\"query\"],\n",
+    "    partial_variables={\n",
+    "        \"format_instructions\": format_instructions,\n",
+    "        \"columns\": \", \".join(df.columns)\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "# 체인 생성\n",
+    "chain = prompt | llm | parser\n",
+    "\n",
+    "# 모델 응답 받기\n",
+    "try:\n",
+    "    # **Name 열을 표시하십시오.**\n",
+    "    print('Name 컬럼 출력')\n",
+    "    df_query = \"Show the Name column\"\n",
+    "\n",
+    "    parser_output = chain.invoke({\"query\": df_query})\n",
+    "    print(type(parser_output))\n",
+    "    print(parser_output)\n",
+    "\n",
+    "        # **첫번째 행을 표시하십시오.**\n",
+    "    print('첫번째 행 출력')\n",
+    "    df_query2 = \"Show first row\"\n",
+    "\n",
+    "    parser_output2 = chain.invoke({\"query\": df_query2})\n",
+    "    print(parser_output2)\n",
+    "\n",
+    "    #Please tell me the average value of the Fare column.\n",
+    "    print('Farre 컬럼의 평균값 출력')\n",
+    "    df_query3 = \"lease tell me the average value of the Fare column.\"\n",
+    "\n",
+    "    parser_output3 = chain.invoke({\"query\": df_query3})\n",
+    "    print(parser_output3)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"오류 발생: {e}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 체인 생성\n",
+    "chain = prompt | llm | parser\n",
+    "\n",
+    "# 모델 응답 받기\n",
+    "try:\n",
+    "    # **Name 열을 표시하십시오.**\n",
+    "    print('Name 컬럼 출력')\n",
+    "    df_query = \"Show the Name column\"\n",
+    "\n",
+    "    parser_output = chain.invoke({\"query\": df_query})\n",
+    "    print(type(parser_output))\n",
+    "    print(parser_output)\n",
+    "\n",
+    "        # **첫번째 행을 표시하십시오.**\n",
+    "    print('첫번째 행 출력')\n",
+    "    df_query2 = \"Show first row\"\n",
+    "\n",
+    "    parser_output2 = chain.invoke({\"query\": df_query2})\n",
+    "    print(parser_output2)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"오류 발생: {e}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# 프롬프트 템플릿 설정\n",
     "prompt = PromptTemplate(\n",
