--- a/src/mylangchain_app/00Basic/003_OutPutParser종류.ipynb
+++ b/src/mylangchain_app/00Basic/003_OutPutParser종류.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +76,8 @@
     "llm = ChatOpenAI(\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
     "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",  # Spring AI와 동일한 모델\n",
-    "    #model=\"moonshotai/kimi-k2-instruct-0905\",\n",
-    "    model=\"openai/gpt-oss-120b\",\n",
+    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
+    "    #model=\"openai/gpt-oss-120b\",\n",
     "    temperature=0.7\n",
     ")\n"
    ]
@@ -168,41 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Format Instructions:\n",
-      " The output should be formatted as a string as the operation, followed by a colon, followed by the column or row to be queried on, followed by optional array parameters.\n",
-      "1. The column names are limited to the possible columns below.\n",
-      "2. Arrays must either be a comma-separated list of numbers formatted as [1,3,5], or it must be in range of numbers formatted as [0..4].\n",
-      "3. Remember that arrays are optional and not necessarily required.\n",
-      "4. If the column is not in the possible columns or the operation is not a valid Pandas DataFrame operation, return why it is invalid as a sentence starting with either \"Invalid column\" or \"Invalid operation\".\n",
-      "\n",
-      "As an example, for the formats:\n",
-      "1. String \"column:num_legs\" is a well-formatted instance which gets the column num_legs, where num_legs is a possible column.\n",
-      "2. String \"row:1\" is a well-formatted instance which gets row 1.\n",
-      "3. String \"column:num_legs[1,2]\" is a well-formatted instance which gets the column num_legs for rows 1 and 2, where num_legs is a possible column.\n",
-      "4. String \"row:1[num_legs]\" is a well-formatted instance which gets row 1, but for just column num_legs, where num_legs is a possible column.\n",
-      "5. String \"mean:num_legs[1..3]\" is a well-formatted instance which takes the mean of num_legs from rows 1 to 3, where num_legs is a possible column and mean is a valid Pandas DataFrame operation.\n",
-      "6. String \"do_something:num_legs\" is a badly-formatted instance, where do_something is not a valid Pandas DataFrame operation.\n",
-      "7. String \"mean:invalid_col\" is a badly-formatted instance, where invalid_col is not a possible column.\n",
-      "\n",
-      "Here are the possible columns:\n",
-      "```\n",
-      "PassengerId, Survived, Pclass, Name, Sex, Age, SibSp, Parch, Ticket, Fare, Cabin, Embarked\n",
-      "```\n",
-      "\n",
-      "Name 컬럼 출력\n",
-      "오류 발생: Request 'The command for the user's query is: \n",
-      "column:Name' is not correctly formatted.                     Please refer to the format instructions.\n",
-      "For troubleshooting, visit: https://python.langchain.com/docs/troubleshooting/errors/OUTPUT_PARSING_FAILURE \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from langchain.output_parsers import PandasDataFrameOutputParser\n",
@@ -252,9 +220,9 @@
     "\n",
     "    parser_output = chain.invoke({\"query\": df_query})\n",
     "    print(type(parser_output))\n",
-    "    #print(parser_output)\n",
+    "    print(parser_output)\n",
     "\n",
-    "        # **첫번째 행을 표시하십시오.**\n",
+    "    # **첫번째 행을 표시하십시오.**\n",
     "    print('첫번째 행 출력')\n",
     "    df_query2 = \"Show first row\"\n",
     "\n",
@@ -274,89 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# 체인 생성\n",
-    "chain = prompt | llm | parser\n",
-    "\n",
-    "# 모델 응답 받기\n",
-    "try:\n",
-    "    # **Name 열을 표시하십시오.**\n",
-    "    print('Name 컬럼 출력')\n",
-    "    df_query = \"Show the Name column\"\n",
-    "\n",
-    "    parser_output = chain.invoke({\"query\": df_query})\n",
-    "    print(type(parser_output))\n",
-    "    print(parser_output)\n",
-    "\n",
-    "        # **첫번째 행을 표시하십시오.**\n",
-    "    print('첫번째 행 출력')\n",
-    "    df_query2 = \"Show first row\"\n",
-    "\n",
-    "    parser_output2 = chain.invoke({\"query\": df_query2})\n",
-    "    print(parser_output2)\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f\"오류 발생: {e}\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# 프롬프트 템플릿 설정\n",
-    "prompt = PromptTemplate(\n",
-    "    template=\"\"\" \n",
-    "    You are a helpful assistant that interacts with a Pandas DataFrame.\n",
-    "    The DataFrame contains the following columns: {columns}.\n",
-    "    \n",
-    "    Your task is to answer the user's query by generating a command in the following format:\n",
-    "    {format_instructions}\n",
-    "    \n",
-    "    User Query: {query}    \n",
-    "    \"\"\",\n",
-    "    input_variables=[\"query\"],\n",
-    "    partial_variables={\n",
-    "        \"format_instructions\": format_instructions,\n",
-    "        \"columns\": \", \".join(df.columns)\n",
-    "    },\n",
-    ")\n",
-    "\n",
-    "# 체인 생성\n",
-    "chain = prompt | llm | parser\n",
-    "\n",
-    "# 모델 응답 받기\n",
-    "try:\n",
-    "    # **Name 열을 표시하십시오.**\n",
-    "    print('Name 컬럼 출력')\n",
-    "    df_query = \"Show the Name column\"\n",
-    "\n",
-    "    parser_output = chain.invoke({\"query\": df_query})\n",
-    "    print(type(parser_output))\n",
-    "    print(parser_output)\n",
-    "\n",
-    "        # **첫번째 행을 표시하십시오.**\n",
-    "    print('첫번째 행 출력')\n",
-    "    df_query2 = \"Show first row\"\n",
-    "\n",
-    "    parser_output2 = chain.invoke({\"query\": df_query2})\n",
-    "    print(parser_output2)\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f\"오류 발생: {e}\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,11 +256,12 @@
     "llm = ChatOpenAI(\n",
     "    api_key=OPENAI_API_KEY,\n",
     "    base_url=\"https://api.groq.com/openai/v1\",  # Groq API 엔드포인트\n",
-    "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
+    "    #model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
+    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
     "    temperature=0\n",
     ")\n",
     "\n",
-    "# 응답 스키마 정의\n",
+    "# 응답 스키마 정의 [{},{},{}]\n",
     "response_schemas = [\n",
     "    #ResponseSchema(name=\"data\", description=\"A list of dictionaries representing table rows.\"),\n",
     "    ResponseSchema(name=\"data\", description=\"테이블 행을 나타내는 딕셔너리들의 리스트\"),\n",
@@ -440,6 +327,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_seoul_housing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print('2024년 서울 지하철역별 유동 인구 데이터')\n",
     "# [예제 2] 2024년 서울 지하철역별 유동 인구 데이터\n",
     "df_seoul_subway = generate_dataframe(\n",
@@ -449,6 +345,15 @@
     "\n",
     "#if df_seoul_subway is not None:\n",
     "df_seoul_subway.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_seoul_subway"
    ]
   },
   {
